Added missed interval columns.  Added columns for calculating total kwh only when needed.